--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 parameters:
   buildReleaseType:
-    description: 'Semantic Version increment type of the release. Valid values: major, minor, patch'
+    description: "Semantic Version increment type of the release. Valid values: major, minor, patch"
     default: "major"
     type: enum
     enum: ["major", "minor", "patch"]
@@ -16,7 +16,7 @@ build-and-sign-ADMU: &build-and-sign-ADMU
   #    requires:
   #      - Build
   #      - Pester Tests
-    #  context: secrethub-credentials
+  #  context: secrethub-credentials
   - Build Module:
       requires:
         - Build
@@ -116,6 +116,7 @@ jobs:
           name: Invoke Pester
           shell: powershell.exe
           command: |
+            $ErrorActionPreference = 'Stop'
             ./jumpcloud-ADMU/Powershell/InvokePester.ps1 << pipeline.parameters.buildReleaseType >>
       - store_test_results:
           name: Uploading test results for ADMU'
@@ -207,12 +208,12 @@ jobs:
       - checkout
       - add_ssh_keys:
           fingerprints:
-            - '6b:97:dc:6d:d1:d1:3f:67:62:c4:ad:2d:96:3c:9a:d7'
+            - "6b:97:dc:6d:d1:d1:3f:67:62:c4:ad:2d:96:3c:9a:d7"
       - attach_workspace:
           at: .
       - run:
           when: on_success
-          name: 'Commit ADMU Module to << pipeline.git.branch >>'
+          name: "Commit ADMU Module to << pipeline.git.branch >>"
           shell: pwsh.exe
           command: |
             $UserEmail = If ($env:CIRCLE_PROJECT_USERNAME) { $env:CIRCLE_PROJECT_USERNAME } Else { ($env:USERNAME).Replace(' ', '') + '@FakeEmail.com' }
