--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -95,6 +95,7 @@ jobs:
       - slack/notify:
           channel: solution-arch-pipeline
           event: always
+          template: basic_fail_1
       - attach_workspace:
           at: .
       - run:
